--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-<p><iframe src="https://raw.githubusercontent.com/kljackpot/kl/main/results/results-1.txt" frameborder="0" height="400"
-                width="95%"></iframe></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KL Jackpot</title>
+    <link rel="stylesheet" href="../assets/style.css">
+</head>
+<body>
+    <div class="title">
+        <img src="../assets/banner.png" alt="banner">
+    </div>
+    <div class="nav">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="results.html">Results</a></li>
+            <li><a href="/">Contact</a></li>
+        </ul>
+    </div>
+    <div class="main" style="line-height: 800px;">
+        <h2>WELCOME TO KL JACKPOT</h2>
+    </div>
+</body>
+</html>
