--- a/results.html
+++ b/results.html
@@ -10,6 +10,7 @@
 <title>KL Jackpot</title>
     <link rel="stylesheet" href="../assets/style.css">
 </head>
+<script>localStorage.clear()</script>
 <body>
     <div class="title">
         <img src="../assets/banner.png" alt="banner">
