--- a/results.html
+++ b/results.html
@@ -31,10 +31,15 @@
         <button onclick="window.location.href='/results-6.html'">6:30 PM</button><br><br>
         <button onclick="window.location.href='/results-7.html'">7:30 PM</button>
     </div>
+    <style>h2{float: left;clear: both;}h2:nth-child(2){padding-bottom: 20px;}h3{clear: both;color: rgb(255, 71, 126);}</style>
     <div class="main">
         <div class="paper">
-            <p><iframe src="../results/results-1.txt" frameborder="0" height="400"
-                width="95%"></iframe></p>
+            <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
+            <h2>Draw no: 10</h2>
+            <h2>Date: 01/09/2021</h2>
+            <h3>First Prize : 555 </h3>
+            <h3>Second Prize : 555 </h3>
+            <h3>Third Prize : 555 </h3>
         </div>
     </div>
 </body>
