--- a/results-5.html
+++ b/results-5.html
@@ -35,10 +35,10 @@
         <div class="paper">
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no:162</h2>
-            <h2>Date: 21/09/2021</h2>
-            <h3>First Prize :234 </h3>
-            <h3>Second Prize :746</h3>
-            <h3>Third Prize :063</h3>
+            <h2>Date: 23/09/2021</h2>
+            <h3>First Prize : </h3>
+            <h3>Second Prize :</h3>
+            <h3>Third Prize :</h3>
         </div>
     </div>
 </body>
