--- a/results-6.html
+++ b/results-6.html
@@ -36,9 +36,9 @@
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no:162</h2>
             <h2>Date: 23/09/2021</h2>
-            <h3>First Prize : </h3>
-            <h3>Second Prize :</h3>
-            <h3>Third Prize :</h3>
+            <h3>First Prize :445 </h3>
+            <h3>Second Prize :026</h3>
+            <h3>Third Prize :031</h3>
         </div>
     </div>
 </body>
