--- a/results-7.html
+++ b/results-7.html
@@ -35,8 +35,8 @@
         <div class="paper">
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no:167</h2>
-            <h2>Date: 25/09/2021</h2>
-            <h3>First Prize :016</h3>
+            <h2>Date: 4/10/2021</h2>
+            <h3>First Prize 328:</h3>
             <h3>Second Prize :279</h3>
             <h3>Third Prize :296</h3>
         </div>
