--- a/results-2.html
+++ b/results-2.html
@@ -35,10 +35,10 @@
         <div class="paper">
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no: 186</h2>
-            <h2>Date: 9/10/2021</h2>
-            <h3>First Prize :933</h3>
-            <h3>Second Prize :930</h3>
-            <h3>Third Prize : 382
+            <h2>Date: 10/10/2021</h2>
+            <h3>First Prize :</h3>
+            <h3>Second Prize :</h3>
+            <h3>Third Prize : 
 
 </h3>
         </div>
