--- a/results-5.html
+++ b/results-5.html
@@ -35,10 +35,10 @@
         <div class="paper">
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no:103</h2>
-            <h2>Date: 25//09/2021</h2>
-            <h3>First Prize :005</h3>
-            <h3>Second Prize :073</h3>
-            <h3>Third Prize :352</h3>
+            <h2>Date: 10//10/2021</h2>
+            <h3>First Prize :</h3>
+            <h3>Second Prize :</h3>
+            <h3>Third Prize :</h3>
         </div>
     </div>
 </body>
