--- a/results-3.html
+++ b/results-3.html
@@ -36,7 +36,7 @@
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no: 106</h2>
             <h2>Date: 10/10/2021</h2>
-            <h3>First Prize 993:</h3>
+            <h3>First Prize :993</h3>
             <h3>Second Prize :084</h3>
             <h3>Third Prize :022</h3>
         </div>
