--- a/results-7.html
+++ b/results-7.html
@@ -36,9 +36,9 @@
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
             <h2>Draw no:167</h2>
             <h2>Date: 10/10/2021</h2>
-            <h3>First Prize :</h3>
-            <h3>Second Prize :</h3>
-            <h3>Third Prize :</h3>
+            <h3>First Prize :001</h3>
+            <h3>Second Prize :025</h3>
+            <h3>Third Prize :027</h3>
         </div>
     </div>
 </body>
