--- a/results-4.html
+++ b/results-4.html
@@ -34,11 +34,11 @@
     <div class="main">
         <div class="paper">
             <!-- <p><iframe src="https://pastebin.com/raw/iQvkiXf3" frameborder="0" height="400" width="95%"></iframe></p> -->
-            <h2>Draw no:102</h2>
-            <h2>Date: 10/10/2021</h2>
-            <h3>First Prize :920</h3>
-            <h3>Second Prize :025</h3>
-            <h3>Third Prize :291</h3>
+            <h2>Draw no:102/3</h2>
+            <h2>Date: 11/10/2021</h2>
+            <h3>First Prize :328</h3>
+            <h3>Second Prize :020</h3>
+            <h3>Third Prize :593</h3>
         </div>
     </div>
 </body>
